force-app/main/default/objects/Underwriting__c/Underwriting__c.object-meta.xml
<CustomObject>
    <label>Underwriting</label>
    <nameField>
        <displayFormat>UW-{0000}</displayFormat>
        <label>Underwriting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwritings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>