force-app/main/default/objects/Underwriting__c/fields/Cash_On_Cash_Return__c.field-meta.xml
<CustomField>
    <fullName>Cash_On_Cash_Return__c</fullName>
    <description>Year 1 levered cash yield on equity invested. Entered from the Excel model output.</description>
    <label>Cash on Cash Return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>