force-app/main/default/objects/Underwriting__c/fields/Equity_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Equity_Multiple__c</fullName>
    <description>Total cash returned to investors divided by total equity invested over the full hold period (e.g. 1.80 = $1.80 back per $1.00 invested).</description>
    <label>Equity Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>