force-app/main/default/objects/Underwriting__c/fields/Equity_Required__c.field-meta.xml
<CustomField>
    <fullName>Equity_Required__c</fullName>
    <label>Equity Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>