force-app/main/default/objects/Underwriting__c/fields/GRM__c.field-meta.xml
<CustomField>
    <fullName>GRM__c</fullName>
    <description>Gross Rent Multiplier - entered manually from Junior&apos;s Excel model.</description>
    <label>GRM</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>