force-app/main/default/objects/Underwriting__c/fields/Hold_Period__c.field-meta.xml
<CustomField>
    <fullName>Hold_Period__c</fullName>
    <label>Hold Period (yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>