force-app/main/default/objects/Underwriting__c/fields/My_Price__c.field-meta.xml
<CustomField>
    <fullName>My_Price__c</fullName>
    <label>My Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>