force-app/main/default/objects/Underwriting__c/fields/Principal_Price_Decision__c.field-meta.xml
<CustomField>
    <fullName>Principal_Price_Decision__c</fullName>
    <description>The final acquisition price agreed by the principals. Used to set the LOI offer price when the LOI record is created.</description>
    <label>Principal Price Decision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>