force-app/main/default/objects/Underwriting__c/fields/Projected_Loan__c.field-meta.xml
<CustomField>
    <fullName>Projected_Loan__c</fullName>
    <label>Projected Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>