force-app/main/default/objects/Underwriting__c/fields/Target_Return__c.field-meta.xml
<CustomField>
    <fullName>Target_Return__c</fullName>
    <label>Target Return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>