force-app/main/default/objects/Underwriting__c/fields/Underwriting_OneDrive_URL__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_OneDrive_URL__c</fullName>
    <label>Underwriting OneDrive URL</label>
    <type>Url</type>
</CustomField>