force-app/main/default/objects/Underwriting__c/fields/Underwritten_NOI__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_NOI__c</fullName>
    <label>Underwritten NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>