force-app/main/default/objects/Underwriting__c/fields/Verdict__c.field-meta.xml
<CustomField>
    <fullName>Verdict__c</fullName>
    <description>Derived: &quot;Go&quot; when Year 5 IRR meets or beats the Target Return, otherwise &quot;—&quot;.</description>
    <formula>IF(ISBLANK(Year_5_IRR__c), &quot;—&quot;, IF(Year_5_IRR__c &gt;= Target_Return__c, &quot;Go&quot;, &quot;—&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verdict</label>
    <type>Text</type>
</CustomField>