force-app/main/default/objects/Underwriting__c/fields/Year_5_IRR__c.field-meta.xml
<CustomField>
    <fullName>Year_5_IRR__c</fullName>
    <description>5-year levered IRR - entered manually from Junior&apos;s Excel model.</description>
    <label>Year 5 IRR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>